<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tip Calculator</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="amount">Enter Amount:</string>
    <string name="amt_field_hint">Pre-Tip</string>
    <string name="radio_10">10%</string>
    <string name="radio_15">15%</string>
    <string name="radio_20">20%</string>
	<string name="radio_custom">Custom</string>
	<string name="min_cust_percent">0%</string>
	<string name="max_cust_percent">50%</string>
	<string name="percent_0">0%</string>
	<string name="pretip_amount">Pre-Tip Amount:</string>
	<string name="tip_amount">Tip Amount:</string>
	<string name="total_price">Total:</string>
	<string name="zero_value">0.00</string>

</resources>
